# python-programming-exercises

./: README.md  pyproject.toml
src/ppe/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py  ex10.py
tests/: test_ex01.py  test_ex02.py  test_ex03.py  test_ex04.py  test_ex05.py  test_ex06.py  test_ex07.py  test_ex08.py  test_ex09.py  test_ex10.py
